--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,21 +25,16 @@ body {
   margin: 0;
 }
 
+.score:hover {
+  color: blue;
+}
+
 h1 {
   font-family: "Fascinate Inline", cursive;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#fff),
-    to(#87f1ff)
-  );
-  background-image: linear-gradient(180deg, #fff, #87f1ff);
   background-size: 100%;
-  -webkit-background-clip: text;
   background-clip: text;
   -webkit-filter: drop-shadow(2px 2px #0085a3);
-  filter: drop-shadow(2px 2px #0085a3);
+          filter: drop-shadow(2px 2px #0085a3);
   font-size: 60px;
   text-align: center;
   font-weight: 400;
@@ -49,28 +44,12 @@ h1 {
 .start,
 .next {
   cursor: pointer;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#fff),
-    to(#ffcc91)
-  );
-  background: linear-gradient(180deg, #fff, #ffcc91);
   border: 2px solid #d38558;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   height: 40px;
   margin: 20px 0;
   padding: 0 40px;
-}
-
-.start {
-  max-width: 200px;
-}
-
-.one {
-  background-image: url("../images/bg-img.jpeg");
 }
 /*# sourceMappingURL=style.css.map */
