--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,6 @@
+// Variables
+$testing-1: blue;
+
 *,
 *:after,
 *:before {
@@ -23,15 +26,15 @@ body {
 .score {
   font-size: 2rem;
   margin: 0;
+  &:hover {
+    color: $testing-1;
+  }
 }
 
 h1 {
   font-family: "Fascinate Inline", cursive;
-  background-image: linear-gradient(180deg, #fff, #87f1ff);
   background-size: 100%;
-  -webkit-background-clip: text;
   background-clip: text;
-  -webkit-filter: drop-shadow(2px 2px #0085a3);
   filter: drop-shadow(2px 2px #0085a3);
   font-size: 60px;
   text-align: center;
@@ -42,19 +45,10 @@ h1 {
 .start,
 .next {
   cursor: pointer;
-  background: linear-gradient(180deg, #fff, #ffcc91);
   border: 2px solid #d38558;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   height: 40px;
   margin: 20px 0;
   padding: 0 40px;
-}
-
-.start {
-  max-width: 200px;
-}
-
-.one {
-  background-image: url("../images/bg-img.jpeg");
 }
