--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:wght@300;400;500;600&display=swap");
+/*
+Google Fonts...
+font-family: 'Fascinate Inline', cursive;
+font-family: 'Poppins', sans-serif;
+*/
+
 // Variables
 $testing-1: blue;
 
