--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:wght@300;400;500;600&display=swap");
+/*
+Google Fonts...
+font-family: 'Fascinate Inline', cursive;
+font-family: 'Poppins', sans-serif;
+*/
 *,
 *:after,
 *:before {
