Update style.scss + remove type enums

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,7 @@ Google Fonts...
 font-family: 'Fascinate Inline', cursive;
 font-family: 'Poppins', sans-serif;
 */
+/*-------------------- Base HTML --------------------*/
 *,
 *:after,
 *:before {
@@ -21,11 +22,18 @@ html {
 }
 
 body {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/bg-img.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/bg-img.jpeg");
+  background-size: cover;
+  background-position: left center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   min-height: 100vh;
   width: 100%;
   font-family: "Poppins", sans-serif;
 }
 
+/*-------------------- Home : Form --------------------*/
 .score {
   font-size: 2rem;
   margin: 0;
@@ -57,5 +65,33 @@ h1 {
   height: 40px;
   margin: 20px 0;
   padding: 0 40px;
+}
+
+/*-------------------- Footer --------------------*/
+footer {
+  text-align: center;
+  background-color: #eeeeee;
+  padding: 10px 0;
+}
+
+footer a {
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.75rem;
+  padding: 5px 0;
+}
+
+footer a:last-of-type {
+  margin-left: 3rem;
+}
+
+footer .fab {
+  color: black;
+}
+
+footer p {
+  font-weight: 500;
+  padding: 10px 15px 0;
+  font-size: 1.125rem;
 }
 /*# sourceMappingURL=style.css.map */
