--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,6 +34,48 @@ body {
 }
 
 /*-------------------- Home : Form --------------------*/
+.homeForm {
+  height: calc(100vh - 96px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.homeForm form {
+  border-radius: 20px;
+  margin: auto;
+  padding: 20px;
+  background-color: #eeeeee;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.homeForm form label {
+  margin-bottom: 5px;
+}
+
+.homeForm form input,
+.homeForm form select {
+  margin-bottom: 30px;
+}
+
 .score {
   font-size: 2rem;
   margin: 0;
@@ -55,13 +97,12 @@ h1 {
   margin: 20px;
 }
 
-.start,
-.next {
+.startBttn {
   cursor: pointer;
   border: 2px solid #d38558;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
+  border-radius: 15px;
   height: 40px;
   margin: 20px 0;
   padding: 0 40px;
