--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,7 +10,15 @@ $ws-bg: rgb(238, 238, 238);
 $testing-1: blue;
 
 //-------------------- Mixin
-
+@mixin myBttns {
+  cursor: pointer;
+  border: 2px solid #d38558;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  height: 40px;
+  margin: 20px 0;
+  padding: 0 40px;
+}
 /*-------------------- Base HTML --------------------*/
 *,
 *:after,
@@ -41,6 +49,33 @@ body {
 }
 
 /*-------------------- Home : Form --------------------*/
+.homeForm {
+  height: calc(100vh - 96px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  form {
+    border-radius: 20px;
+    margin: auto;
+    padding: 20px;
+    background-color: $ws-bg;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: fit-content;
+  }
+
+  form label {
+    margin-bottom: 5px;
+  }
+
+  form input,
+  form select {
+    margin-bottom: 30px;
+  }
+}
+
 .score {
   font-size: 2rem;
   margin: 0;
@@ -60,16 +95,20 @@ h1 {
   margin: 20px;
 }
 
-.start,
-.next {
-  cursor: pointer;
-  border: 2px solid #d38558;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  height: 40px;
-  margin: 20px 0;
-  padding: 0 40px;
+.startBttn {
+  @include myBttns()
 }
+
+// .start,
+// .next {
+//   cursor: pointer;
+//   border: 2px solid #d38558;
+//   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+//   border-radius: 10px;
+//   height: 40px;
+//   margin: 20px 0;
+//   padding: 0 40px;
+// }
 
 /*-------------------- Footer --------------------*/
 footer {
