--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,7 +29,6 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   min-height: 100vh;
-  width: 100%;
   font-family: "Poppins", sans-serif;
 }
 
@@ -50,7 +49,7 @@ body {
 .homeForm form {
   border-radius: 20px;
   margin: auto;
-  padding: 20px;
+  padding: 15px;
   background-color: #eeeeee;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -62,18 +61,19 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .homeForm form label {
+  padding-left: 5px;
   margin-bottom: 5px;
 }
 
 .homeForm form input,
 .homeForm form select {
+  padding: 8px;
+  margin-left: 5px;
   margin-bottom: 30px;
+  border-radius: 5px;
 }
 
 .score {
@@ -81,20 +81,14 @@ body {
   margin: 0;
 }
 
-.score:hover {
-  color: blue;
-}
-
 h1 {
   font-family: "Fascinate Inline", cursive;
-  background-size: 100%;
-  background-clip: text;
-  -webkit-filter: drop-shadow(2px 2px #0085a3);
-          filter: drop-shadow(2px 2px #0085a3);
-  font-size: 60px;
+  -webkit-filter: drop-shadow(4px 2px #1bbaea);
+          filter: drop-shadow(4px 2px #1bbaea);
+  font-size: 40px;
+  letter-spacing: 1px;
   text-align: center;
-  font-weight: 400;
-  margin: 20px;
+  margin-bottom: 10px;
 }
 
 .startBttn {
@@ -134,5 +128,12 @@ footer p {
   font-weight: 500;
   padding: 10px 15px 0;
   font-size: 1.125rem;
+}
+
+/*-------------------- Media Queries --------------------*/
+@media screen and (max-width: 492px) {
+  .homeForm {
+    height: calc(100vh - 123px);
+  }
 }
 /*# sourceMappingURL=style.css.map */
