--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,9 +97,11 @@ h1 {
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
-  height: 40px;
-  margin: 20px 0;
-  padding: 0 40px;
+  margin: 0 auto;
+  padding: 10px 40px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 /*-------------------- Footer --------------------*/
