--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,9 +20,9 @@ $ws-bg: rgb(238, 238, 238);
   border: 2px solid #d38558;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
-  height: 40px;
-  margin: 20px 0;
-  padding: 0 40px;
+  margin: 0 auto;
+  padding: 10px 40px;
+  width: fit-content;
 }
 
 /*-------------------- Base HTML --------------------*/
