--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:wght@300;400;500;600;700&display=swap");
 /*
 Google Fonts...
 font-family: 'Fascinate Inline', cursive;
@@ -34,7 +34,7 @@ body {
 
 /*-------------------- Home : Form --------------------*/
 .homeForm {
-  height: calc(100vh - 96px);
+  height: calc(100vh - 95px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,6 +47,7 @@ body {
 }
 
 .homeForm form {
+  width: 400px;
   border-radius: 20px;
   margin: auto;
   padding: 15px;
@@ -66,6 +67,7 @@ body {
 .homeForm form label {
   padding-left: 5px;
   margin-bottom: 5px;
+  font-weight: 600;
 }
 
 .homeForm form input,
@@ -74,6 +76,8 @@ body {
   margin-left: 5px;
   margin-bottom: 30px;
   border-radius: 5px;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .score {
@@ -93,7 +97,7 @@ h1 {
 
 .startBttn {
   cursor: pointer;
-  border: 2px solid #d38558;
+  border: 2px solid tan;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -102,6 +106,8 @@ h1 {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 /*-------------------- Footer --------------------*/
@@ -135,7 +141,34 @@ footer p {
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
   .homeForm {
-    height: calc(100vh - 123px);
+    height: calc(100vh - 122px);
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .homeForm form {
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .homeForm form {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .homeForm form {
+    width: 270px;
+  }
+}
+
+@media screen and (max-width: 653px) and (max-height: 280px) {
+  .homeForm {
+    height: 100%;
+  }
+  .homeForm form {
+    margin: 50px auto;
   }
 }
 /*# sourceMappingURL=style.css.map */
