--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:wght@300;400;500;600;700&display=swap");
 /*
 Google Fonts...
 font-family: 'Fascinate Inline', cursive;
@@ -6,23 +6,38 @@ font-family: 'Poppins', sans-serif;
 */
 
 //-------------------- Variables
-$phoneS-width: 320px;
-$phoneM-width: 375px;
-$phoneL-width: 425px;
-$tablet-width: 768px;
-$desktop-width: 1024px;
-$desktopL-width: 1440px;
 $ws-bg: rgb(238, 238, 238);
+$black-font-shadow: black 0px 0px 2px;
 
 //-------------------- Mixin
 @mixin myBttns {
   cursor: pointer;
-  border: 2px solid #d38558;
+  border: 2px solid tan;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
   margin: 0 auto;
   padding: 10px 40px;
   width: fit-content;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+@mixin placeholder {
+  ::-webkit-input-placeholder {
+    @content
+  }
+
+  :-moz-placeholder {
+    @content
+  }
+
+  ::-moz-placeholder {
+    @content
+  }
+
+  :-ms-input-placeholder {
+    @content
+  }
 }
 
 /*-------------------- Base HTML --------------------*/
@@ -55,12 +70,13 @@ body {
 
 /*-------------------- Home : Form --------------------*/
 .homeForm {
-  height: calc(100vh - 96px);
+  height: calc(100vh - 95px);
   display: flex;
   justify-content: center;
   align-items: center;
 
   form {
+    width: 400px;
     border-radius: 20px;
     margin: auto;
     padding: 15px;
@@ -73,6 +89,7 @@ body {
   form label {
     padding-left: 5px;
     margin-bottom: 5px;
+    font-weight: 600;
   }
 
   form input,
@@ -81,8 +98,12 @@ body {
     margin-left: 5px;
     margin-bottom: 30px;
     border-radius: 5px;
+    font-size: 15px;
+    font-weight: 500;
   }
 }
+
+
 
 .score {
   font-size: 2rem;
@@ -136,6 +157,40 @@ footer {
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
   .homeForm {
-    height: calc(100vh - 123px);
+    height: calc(100vh - 122px);
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .homeForm {
+    form {
+      width: 350px;
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .homeForm {
+    form {
+      width: 300px;
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .homeForm {
+    form {
+      width: 270px;
+    }
+  }
+}
+
+// Galaxy fold horizontal mode
+@media screen and (max-width: 653px) and (max-height: 280px){
+  .homeForm {
+    height: 100%;
+    form {
+      margin: 50px auto;
+    }
   }
 }
