--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,6 +46,16 @@ body {
           align-items: center;
 }
 
+.homeForm h1 {
+  font-family: "Fascinate Inline", cursive;
+  -webkit-filter: drop-shadow(4px 2px #1bbaea);
+          filter: drop-shadow(4px 2px #1bbaea);
+  font-size: 40px;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .homeForm form {
   width: 400px;
   border-radius: 20px;
@@ -78,21 +88,6 @@ body {
   border-radius: 5px;
   font-size: 15px;
   font-weight: 500;
-}
-
-.score {
-  font-size: 2rem;
-  margin: 0;
-}
-
-h1 {
-  font-family: "Fascinate Inline", cursive;
-  -webkit-filter: drop-shadow(4px 2px #1bbaea);
-          filter: drop-shadow(4px 2px #1bbaea);
-  font-size: 40px;
-  letter-spacing: 1px;
-  text-align: center;
-  margin-bottom: 10px;
 }
 
 .startBttn {
@@ -160,6 +155,7 @@ footer p {
 @media screen and (max-width: 320px) {
   .homeForm form {
     width: 270px;
+    padding: 10px;
   }
 }
 
