--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -75,6 +75,15 @@ body {
   justify-content: center;
   align-items: center;
 
+  h1 {
+    font-family: "Fascinate Inline", cursive;
+    filter: drop-shadow(4px 2px #1bbaea);
+    font-size: 40px;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
   form {
     width: 400px;
     border-radius: 20px;
@@ -101,25 +110,6 @@ body {
     font-size: 15px;
     font-weight: 500;
   }
-}
-
-
-
-.score {
-  font-size: 2rem;
-  margin: 0;
-  // &:hover {
-  //   color: $testing-1;
-  // }
-}
-
-h1 {
-  font-family: "Fascinate Inline", cursive;
-  filter: drop-shadow(4px 2px #1bbaea);
-  font-size: 40px;
-  letter-spacing: 1px;
-  text-align: center;
-  margin-bottom: 10px;
 }
 
 .startBttn {
@@ -181,14 +171,16 @@ footer {
   .homeForm {
     form {
       width: 270px;
+      padding: 10px;
     }
   }
 }
 
 // Galaxy fold horizontal mode
-@media screen and (max-width: 653px) and (max-height: 280px){
+@media screen and (max-width: 653px) and (max-height: 280px) {
   .homeForm {
     height: 100%;
+
     form {
       margin: 50px auto;
     }
