--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -90,7 +90,7 @@ body {
   font-weight: 500;
 }
 
-.startBttn {
+.startButton {
   cursor: pointer;
   border: 2px solid tan;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
