--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,7 +10,7 @@ $ws-bg: rgb(238, 238, 238);
 $black-font-shadow: black 0px 0px 2px;
 
 //-------------------- Mixin
-@mixin myBttns {
+@mixin myButtons {
   cursor: pointer;
   border: 2px solid tan;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
@@ -112,8 +112,8 @@ body {
   }
 }
 
-.startBttn {
-  @include myBttns();
+.startButton {
+  @include myButtons();
 }
 
 /*-------------------- Footer --------------------*/
