--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,21 +22,40 @@ $black-font-shadow: black 0px 0px 2px;
   font-weight: 600;
 }
 
-@mixin placeholder {
-  ::-webkit-input-placeholder {
-    @content
+//-------------------- Loader
+.dots {
+  height: calc(100vh - 95px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+
+  div {
+    width: 0.8em;
+    height: 0.8em;
+    margin-left: 12px;
+    border-radius: 50%;
+    background-color: $ws-bg;
+    filter: drop-shadow(0px 0px 2px black);
+    animation: fade 0.8s ease-in-out alternate infinite;
   }
 
-  :-moz-placeholder {
-    @content
+  div:nth-of-type(1) {
+    animation-delay: -0.4s;
   }
 
-  ::-moz-placeholder {
-    @content
+  div:nth-of-type(2) {
+    animation-delay: -0.2s;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 1;
   }
 
-  :-ms-input-placeholder {
-    @content
+  to {
+    opacity: 0;
   }
 }
 
@@ -58,10 +77,10 @@ html {
 }
 
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/bg-img.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("../unsplash-bg.jpg");
   background-size: cover;
-  background-position: left center;
+  background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   min-height: 100vh;
@@ -146,7 +165,7 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
-  .homeForm {
+  .homeForm, .dots {
     height: calc(100vh - 122px);
   }
 }
