--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,14 +12,22 @@ $black-font-shadow: black 0px 0px 2px;
 //-------------------- Mixin
 @mixin myButtons {
   cursor: pointer;
-  border: 2px solid tan;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  border: 2px solid rgb(99, 85, 68);
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   margin: 0 auto;
   padding: 10px 40px;
   width: fit-content;
-  font-size: 15px;
+  font-size: 16px;
+  background: linear-gradient(180deg, rgb(241, 228, 228), rgb(206, 129, 29));
   font-weight: 600;
+}
+
+@mixin cardsContainer {
+  height: calc(100vh - 95px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 //-------------------- Loader
@@ -87,21 +95,18 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/*-------------------- Home : Form --------------------*/
-.homeForm {
-  height: calc(100vh - 95px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+h1 {
+  font-family: "Fascinate Inline", cursive;
+  filter: drop-shadow(4px 2px #1bbaea);
+  font-size: 40px;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 10px;
+}
 
-  h1 {
-    font-family: "Fascinate Inline", cursive;
-    filter: drop-shadow(4px 2px #1bbaea);
-    font-size: 40px;
-    letter-spacing: 1px;
-    text-align: center;
-    margin-bottom: 10px;
-  }
+/*-------------------- Home.tsx --------------------*/
+.homeForm {
+  @include cardsContainer();
 
   form {
     width: 400px;
@@ -115,8 +120,7 @@ body {
   }
 
   form label {
-    padding-left: 5px;
-    margin-bottom: 5px;
+    margin: 0 0 5px 5px;
     font-weight: 600;
   }
 
@@ -129,11 +133,64 @@ body {
     font-size: 15px;
     font-weight: 500;
   }
+
+  .startButton {
+    @include myButtons();
+  }
 }
 
-.startButton {
-  @include myButtons();
+
+/*-------------------- QuestionCard.tsx --------------------*/
+.cardContainer {
+  @include cardsContainer();
+
+  .cards {
+    width: 400px;
+    border-radius: 20px;
+    margin: auto;
+    padding: 15px;
+    background-color: $ws-bg;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    h4 {
+      font-size: 20px;
+      font-weight: 600;
+      text-align: center;
+    }
+
+    p {
+      margin-top: 10px;
+      font-size: 18px;
+      user-select: none;
+    }
+
+    .answersButtons {
+      margin-top: 20px;
+
+      :hover {
+        opacity: 0.8;
+      }
+
+      button {
+        cursor: pointer;
+        user-select: none;
+        font-size: 18px;
+        font-weight: 500;
+        width: 100%;
+        padding: 5px 0;
+        margin: 10px 0;
+        border: 2px solid rgb(26, 26, 26);
+        box-shadow: -6px 5px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 15px;
+        color: black;
+      }
+    }
+  }
 }
+
+
 
 /*-------------------- Footer --------------------*/
 footer {
@@ -165,7 +222,9 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
-  .homeForm, .dots {
+
+  .homeForm,
+  .dots {
     height: calc(100vh - 122px);
   }
 }
