--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,16 +5,16 @@ font-family: 'Fascinate Inline', cursive;
 font-family: 'Poppins', sans-serif;
 */
 .dots {
-  height: calc(100vh - 95px);
+  height: calc(100vh - 105px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 auto;
 }
 
@@ -76,8 +76,7 @@ html {
 }
 
 body {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url("../unsplash-bg.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../unsplash-bg.jpg");
+  background-image: linear-gradient(100deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.8)), url("../unsplash-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -98,7 +97,7 @@ h1 {
 
 /*-------------------- Home.tsx --------------------*/
 .homeForm {
-  height: calc(100vh - 95px);
+  height: calc(100vh - 105px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -171,7 +170,7 @@ h1 {
 
 /*-------------------- QuestionCard.tsx --------------------*/
 .cardContainer {
-  height: calc(100vh - 95px);
+  height: calc(100vh - 105px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -214,10 +213,7 @@ h1 {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-}
-
-.cardContainer .cards .answersButtons {
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .cardContainer .cards .answersButtons :hover {
@@ -233,7 +229,7 @@ h1 {
   font-size: 18px;
   font-weight: 500;
   width: 100%;
-  padding: 5px 0;
+  padding: 6px 10px;
   margin: 10px 0;
   border: 2px solid #1a1a1a;
   -webkit-box-shadow: -6px 5px 5px rgba(0, 0, 0, 0.5);
@@ -266,42 +262,78 @@ footer .fab {
 
 footer p {
   font-weight: 500;
-  padding: 10px 15px 0;
+  padding: 10px 15px;
   font-size: 1.125rem;
 }
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
   .homeForm,
-  .dots {
-    height: calc(100vh - 122px);
+  .dots,
+  .cardContainer {
+    height: calc(100vh - 133px);
   }
 }
 
 @media screen and (max-width: 425px) {
   .homeForm form {
-    width: 350px;
+    width: 360px;
+  }
+  .cardContainer .cards {
+    width: 360px;
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 355px) {
+  .homeForm {
+    height: 100%;
+  }
   .homeForm form {
-    width: 300px;
+    padding: 10px;
+    margin: 30px auto;
+    width: 320px;
+  }
+  .cardContainer .cards {
+    margin: 30px auto;
+    width: 320px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .homeForm form {
-    width: 270px;
-    padding: 10px;
+    width: 260px;
   }
 }
 
-@media screen and (max-width: 653px) and (max-height: 280px) {
+@media screen and (max-width: 1024px) and (max-height: 600px) {
   .homeForm {
     height: 100%;
   }
   .homeForm form {
+    margin: 50px auto;
+  }
+}
+
+@media screen and (max-width: 375px) and (max-height: 720px) {
+  .homeForm {
+    height: 100%;
+  }
+  .homeForm form {
+    margin: 50px auto;
+  }
+}
+
+@media screen and (max-width: 667px) and (max-height: 375px) {
+  .homeForm {
+    height: 100%;
+  }
+  .homeForm form {
+    margin: 50px auto;
+  }
+  .cardContainer {
+    height: 100%;
+  }
+  .cardContainer .cards {
     margin: 50px auto;
   }
 }
