--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ $black-font-shadow: black 0px 0px 2px;
 }
 
 @mixin cardsContainer {
-  height: calc(100vh - 95px);
+  height: calc(100vh - 105px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,10 +32,7 @@ $black-font-shadow: black 0px 0px 2px;
 
 //-------------------- Loader
 .dots {
-  height: calc(100vh - 95px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include cardsContainer();
   margin: 0 auto;
 
   div {
@@ -86,7 +83,11 @@ html {
 
 body {
   // background-color: $ws-bg;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+  background-image: linear-gradient(
+      100deg,
+      rgba(0, 0, 0, 0.65),
+      rgba(0, 0, 0, 0.8)
+    ),
     url("../unsplash-bg.jpg");
   background-size: cover;
   background-position: center center;
@@ -173,11 +174,10 @@ h1 {
       margin-top: 10px;
       font-size: 18px;
       user-select: none;
+      margin-bottom: 20px;
     }
 
     .answersButtons {
-      margin-top: 20px;
-
       :hover {
         opacity: 0.8;
       }
@@ -188,7 +188,7 @@ h1 {
         font-size: 18px;
         font-weight: 500;
         width: 100%;
-        padding: 5px 0;
+        padding: 6px 10px;
         margin: 10px 0;
         border: 2px solid rgb(26, 26, 26);
         box-shadow: -6px 5px 5px rgba(0, 0, 0, 0.5);
@@ -222,7 +222,7 @@ footer {
 
   p {
     font-weight: 500;
-    padding: 10px 15px 0;
+    padding: 10px 15px;
     font-size: 1.125rem;
   }
 }
@@ -230,23 +230,40 @@ footer {
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
   .homeForm,
-  .dots {
-    height: calc(100vh - 122px);
+  .dots,
+  .cardContainer {
+    height: calc(100vh - 133px);
   }
 }
 
 @media screen and (max-width: 425px) {
   .homeForm {
     form {
-      width: 350px;
+      width: 360px;
+    }
+  }
+  .cardContainer {
+    .cards {
+      width: 360px;
     }
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 355px) {
   .homeForm {
+    height: 100%;
+
     form {
-      width: 300px;
+      padding: 10px;
+      margin: 30px auto;
+      width: 320px;
+    }
+  }
+
+  .cardContainer {
+    .cards {
+      margin: 30px auto;
+      width: 320px;
     }
   }
 }
@@ -254,18 +271,45 @@ footer {
 @media screen and (max-width: 320px) {
   .homeForm {
     form {
-      width: 270px;
-      padding: 10px;
+      width: 260px;
     }
   }
 }
 
-// Galaxy fold horizontal mode
-@media screen and (max-width: 653px) and (max-height: 280px) {
+
+@media screen and (max-width: 1024px) and (max-height: 600px) {
   .homeForm {
     height: 100%;
 
     form {
+      margin: 50px auto;
+    }
+  }
+}
+
+@media screen and (max-width: 375px) and (max-height: 720px) {
+  .homeForm {
+    height: 100%;
+
+    form {
+      margin: 50px auto;
+    }
+  }
+}
+
+@media screen and (max-width: 667px) and (max-height: 375px) {
+  .homeForm {
+    height: 100%;
+
+    form {
+      margin: 50px auto;
+    }
+  }
+
+  .cardContainer {
+    height: 100%;
+
+    .cards {
       margin: 50px auto;
     }
   }
