--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -231,11 +231,12 @@ h1 {
   width: 100%;
   padding: 6px 10px;
   margin: 10px 0;
-  border: 2px solid #1a1a1a;
+  border: 1px solid #1a1a1a;
   -webkit-box-shadow: -6px 5px 5px rgba(0, 0, 0, 0.5);
           box-shadow: -6px 5px 5px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   color: black;
+  background-color: #eeeeee;
 }
 
 /*-------------------- Footer --------------------*/
