--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -190,10 +190,11 @@ h1 {
         width: 100%;
         padding: 6px 10px;
         margin: 10px 0;
-        border: 2px solid rgb(26, 26, 26);
+        border: 1px solid rgb(26, 26, 26);
         box-shadow: -6px 5px 5px rgba(0, 0, 0, 0.5);
         border-radius: 15px;
         color: black;
+        background-color: $ws-bg;
       }
     }
   }
