--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -195,6 +195,11 @@ h1 {
         background-color: $ws-bg;
       }
     }
+
+    .nextButton {
+      @include myButtons();
+      margin: 20px auto 10px;
+    }
   }
 }
 
