--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -206,6 +206,8 @@ h1 {
       .anyAns {
         border: 2px solid rgb(236, 104, 55);
         background: rgb(182, 255, 246);
+        animation: fadeInDown;
+        animation-duration: 2s;
       }
     }
 
