--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -83,9 +83,11 @@ html {
 
 body {
   // background-color: $ws-bg;
-  background-image: linear-gradient(100deg,
+  background-image: linear-gradient(
+      100deg,
       rgba(0, 0, 0, 0.65),
-      rgba(0, 0, 0, 0.8)),
+      rgba(0, 0, 0, 0.8)
+    ),
     url("../unsplash-bg.jpg");
   background-size: cover;
   background-position: center center;
@@ -215,6 +217,26 @@ h1 {
       @include myButtons();
       margin: 20px auto 10px;
     }
+
+    .gameoverButtonsContainer {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      .showResultsButton {
+        @include myButtons();
+        margin: 10px 0 15px;
+        background: #1bbaea;
+      }
+
+      .resetQuizButton {
+        @include myButtons();
+        a {
+          color: black;
+          text-decoration: none;
+        }
+      }
+    }
   }
 }
 
@@ -248,7 +270,6 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
-
   .homeForm,
   .dots,
   .cardContainer {
@@ -280,6 +301,8 @@ footer {
   }
 
   .cardContainer {
+    height: 100%;
+
     .cards {
       margin: 30px auto;
       width: 320px;
@@ -345,8 +368,6 @@ footer {
   }
 
   .cardContainer {
-    height: 100%;
-
     .cards {
       margin: 50px auto;
     }
