--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -84,9 +84,11 @@ html {
 
 body {
   // background-color: $ws-bg;
-  background-image: linear-gradient(100deg,
+  background-image: linear-gradient(
+      100deg,
       rgba(0, 0, 0, 0.65),
-      rgba(0, 0, 0, 0.8)),
+      rgba(0, 0, 0, 0.8)
+    ),
     url("../unsplash-bg.jpg");
   background-size: cover;
   background-position: center center;
@@ -262,14 +264,50 @@ h1 {
     .eachDiv {
       margin-bottom: 25px;
 
-      p {
-        font-size: 20px;
+      .oneLine {
+        p {
+          position: relative;
+          font-size: 20px;
+          span {
+            color: whitesmoke;
+            padding-left: 10px;
+          }
+        }
+
+        .scoreOne {
+          color: rgb(0, 255, 94);
+        }
+
+        .scoreZero {
+          color: rgb(238, 75, 43);
+        }
+
+        .scoreOne::before {
+          content: "";
+          z-index: -100;
+          left: 1px;
+          top: 24px;
+          position: absolute;
+          background: rgb(0, 255, 94);
+          height: 2px;
+          width: 36px;
+        }
+
+        .scoreZero::before {
+          content: "";
+          z-index: -100;
+          left: 1px;
+          top: 24px;
+          position: absolute;
+          background: rgb(238, 75, 43);
+          height: 2px;
+          width: 42px;
+        }
       }
 
       button {
         display: flex;
         flex-direction: column;
-        background-color: whitesmoke;
         user-select: none;
         font-size: 18px;
         font-weight: 500;
@@ -278,11 +316,11 @@ h1 {
         box-shadow: -6px 8px 6px rgba(0, 0, 0, 0.678);
         border-radius: 15px;
         color: black;
+        min-width: 260px;
       }
     }
   }
 }
-
 
 /*-------------------- Footer.tsx --------------------*/
 footer {
@@ -314,7 +352,6 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
-
   .homeForm,
   .dots,
   .cardContainer {
