--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -41,7 +41,7 @@ $light-orange: rgb(236, 104, 55);
   box-shadow: -6px 8px 6px rgba(0, 0, 0, 0.678);
   border-radius: 15px;
   color: black;
-  width: 200px;
+  width: 280px;
 }
 
 //-------------------- Loader
@@ -262,6 +262,11 @@ h1 {
   background-color: rgba(106, 147, 167, 0.2);
   color: rgb(255, 255, 255);
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   h4 {
     text-shadow: $black-font-shadow;
     font-size: 26px;
@@ -370,6 +375,7 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
+
   .homeForm,
   .dots,
   .cardContainer {
@@ -401,16 +407,30 @@ footer {
   }
 
   .cardContainer {
-    height: 100%;
-
     .cards {
       margin: 30px auto;
       width: 320px;
     }
   }
+
+  .resContainer {
+    .ansContainer {
+      padding: 0 10px 20px;
+
+      .eachDiv {
+        .oneLine {
+          .anyResBtn,
+          .correctResBtn,
+          .wrongResBtn {
+            width: 220px;
+          }
+        }
+      }
+    }
+  }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 325px) {
   .homeForm {
     form {
       width: 300px;
@@ -436,6 +456,20 @@ footer {
       width: 270px;
     }
   }
+}
+
+@media screen and (max-width: 280px) {
+    .homeForm {
+      form {
+        width: 250px;
+      }
+    }
+
+    .cardContainer {
+      .cards {
+        width: 250px;
+      }
+    }
 }
 
 @media screen and (max-width: 1024px) and (max-height: 600px) {
