--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -241,8 +241,8 @@ h1 {
 }
 
 .cardContainer .cards .answersButtons .wrongAns {
-  border: 2px solid #e91919;
-  background: lightcoral;
+  border: 2px solid #ff6464;
+  background: #e03232;
 }
 
 .cardContainer .cards .answersButtons .anyAns {
@@ -487,7 +487,7 @@ h1 {
   color: black;
   width: 280px;
   background: lightcoral;
-  border: 2px solid #e91919;
+  border: 2px solid #ff6464;
 }
 
 /*-------------------- Footer.tsx --------------------*/
