--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -242,7 +242,7 @@ h1 {
 
 .cardContainer .cards .answersButtons .wrongAns {
   border: 2px solid #ff6464;
-  background: #e03232;
+  background: #ff2020;
 }
 
 .cardContainer .cards .answersButtons .anyAns {
