--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -260,16 +260,28 @@ h1 {
   min-height: calc(100vh - 105px);
   background-color: rgba(106, 147, 167, 0.2);
   color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
-  h4 {
-    text-shadow: $black-font-shadow;
-    font-size: 26px;
-    padding: 50px 20px;
-    text-align: center;
+  .topContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h4 {
+      text-shadow: $black-font-shadow;
+      font-size: 26px;
+      padding: 30px 20px;
+    }
+
+    .resetQuizButton {
+      @include myButtons();
+      margin: 0 auto 35px;
+
+      a {
+        color: black;
+        text-decoration: none;
+      }
+    }
   }
 
   .ansContainer {
@@ -417,6 +429,7 @@ footer {
 
       .eachDiv {
         .oneLine {
+
           .anyResBtn,
           .correctResBtn,
           .wrongResBtn {
@@ -457,17 +470,17 @@ footer {
 }
 
 @media screen and (max-width: 280px) {
-    .homeForm {
-      form {
-        width: 250px;
-      }
+  .homeForm {
+    form {
+      width: 250px;
     }
+  }
 
-    .cardContainer {
-      .cards {
-        width: 250px;
-      }
+  .cardContainer {
+    .cards {
+      width: 250px;
     }
+  }
 }
 
 @media screen and (max-width: 1024px) and (max-height: 600px) {
