--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,9 +62,11 @@ html {
 }
 
 body {
-  background-image: linear-gradient(100deg,
+  background-image: linear-gradient(
+      100deg,
       rgba(0, 0, 0, 0.65),
-      rgba(0, 0, 0, 0.8)),
+      rgba(0, 0, 0, 0.8)
+    ),
     url("../unsplash-bg.jpg");
   background-size: cover;
   background-position: center center;
@@ -385,7 +387,6 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
-
   .homeForm,
   .dots,
   .cardContainer {
@@ -429,7 +430,6 @@ footer {
 
       .eachDiv {
         .oneLine {
-
           .anyResBtn,
           .correctResBtn,
           .wrongResBtn {
@@ -500,6 +500,10 @@ footer {
     form {
       margin: 50px auto;
     }
+  }
+
+  .cardContainer {
+    height: 100%;
   }
 }
 
