--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -160,6 +160,7 @@ h1 {
   width: -moz-fit-content;
   width: fit-content;
   font-size: 16px;
+  color: black;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1e4e4), to(#ce811d));
   background: linear-gradient(180deg, #f1e4e4, #ce811d);
   font-weight: 600;
@@ -266,6 +267,7 @@ h1 {
   width: -moz-fit-content;
   width: fit-content;
   font-size: 16px;
+  color: black;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1e4e4), to(#ce811d));
   background: linear-gradient(180deg, #f1e4e4, #ce811d);
   font-weight: 600;
@@ -297,6 +299,7 @@ h1 {
   width: -moz-fit-content;
   width: fit-content;
   font-size: 16px;
+  color: black;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1e4e4), to(#ce811d));
   background: linear-gradient(180deg, #f1e4e4, #ce811d);
   font-weight: 600;
@@ -316,6 +319,7 @@ h1 {
   width: -moz-fit-content;
   width: fit-content;
   font-size: 16px;
+  color: black;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1e4e4), to(#ce811d));
   background: linear-gradient(180deg, #f1e4e4, #ce811d);
   font-weight: 600;
@@ -367,6 +371,7 @@ h1 {
   width: -moz-fit-content;
   width: fit-content;
   font-size: 16px;
+  color: black;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1e4e4), to(#ce811d));
   background: linear-gradient(180deg, #f1e4e4, #ce811d);
   font-weight: 600;
