--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@ $light-orange: rgb(236, 104, 55);
   padding: 10px 40px;
   width: fit-content;
   font-size: 16px;
+  color: black;
   background: linear-gradient(180deg, rgb(241, 228, 228), rgb(206, 129, 29));
   font-weight: 600;
 }
